--- a/practice1/Base.lproj/Main.storyboard
+++ b/practice1/Base.lproj/Main.storyboard
@@ -54,7 +54,13 @@
                             <outlet property="delegate" destination="oiS-Ty-hoE" id="HY2-6b-39N"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="mb9-rV-oJw"/>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="mb9-rV-oJw">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="placeholder" id="nfh-C6-kGP">
+                            <connections>
+                                <segue destination="Xm8-x8-9Un" kind="show" identifier="totalmap" id="f33-Og-Cqk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kJd-d4-MRl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -107,5 +113,39 @@
             </objects>
             <point key="canvasLocation" x="-1124" y="-43"/>
         </scene>
+        <!--Total Map View Controller-->
+        <scene sceneID="a3Z-28-Fht">
+            <objects>
+                <viewController id="Xm8-x8-9Un" customClass="TotalMapViewController" customModule="practice1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hez-Rt-d2t">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="aUE-wc-Oad">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rsK-fA-7kl" firstAttribute="bottom" secondItem="aUE-wc-Oad" secondAttribute="bottom" id="2aP-BZ-BgP"/>
+                            <constraint firstItem="rsK-fA-7kl" firstAttribute="trailing" secondItem="aUE-wc-Oad" secondAttribute="trailing" id="7BT-Et-a4h"/>
+                            <constraint firstItem="aUE-wc-Oad" firstAttribute="top" secondItem="rsK-fA-7kl" secondAttribute="top" id="Eqh-su-QHZ"/>
+                            <constraint firstItem="rsK-fA-7kl" firstAttribute="bottom" secondItem="aUE-wc-Oad" secondAttribute="bottom" id="Gse-vT-oac"/>
+                            <constraint firstItem="aUE-wc-Oad" firstAttribute="leading" secondItem="rsK-fA-7kl" secondAttribute="leading" id="VGZ-iE-JWy"/>
+                            <constraint firstItem="aUE-wc-Oad" firstAttribute="top" secondItem="rsK-fA-7kl" secondAttribute="top" id="d3j-uh-C4A"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="rsK-fA-7kl"/>
+                    </view>
+                    <connections>
+                        <outlet property="total" destination="aUE-wc-Oad" id="P89-er-N3F"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2FE-Qg-iD0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-118" y="722"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="placeholder" width="32" height="32"/>
+    </resources>
 </document>
